<resources>
    <string name="app_name">Plan Do Done</string>
    <string name="label_gen_yes">Yes</string>
    <string name="label_gen_no">No</string>
    <string name="label_gen_close">Close</string>
    <string name="label_gen_save">Save</string>
    <string name="label_gen_cancel">Cancel</string>
    <string name="label_gen_delete">Delete</string>
    <string name="label_gen_back">Back</string>
    <string name="project_add">Add Project</string>
    <string name="project_title">Projects</string>
    <string name="project_add_help">Please first add a project and than todo items.</string>
    <string name="project_edit_name">Project name</string>
    <string name="project_edit_active">Project active?</string>
    <string name="project_all_todo">All todo\'s</string>
    <string name="project_first_todo">First todo</string>
    <string name="todo_edit_project">Edit project</string>
    <string name="todo_add_todo">Add todo</string>
    <string name="todo_add_no_project_title">No projects</string>
    <string name="todo_add_no_project">No projects available, please add a project first</string>
    <string name="todo_title">Todo description</string>
    <string name="todo_title_desc">Title of the todo</string>
    <string name="todo_description">Description</string>
    <string name="todo_description_desc">Longer description of the todo</string>
    <string name="todo_project_name">Project</string>
    <string name="todo_status">Status</string>
    <string name="todo_delete_conform">Delete this todo?</string>
    <string name="todo_delete_conform_title">Confirm deletion of this todo</string>
    <string name="project_next">Goto next project</string>
    <string name="project_previous">Goto previous project</string>
    <string name="project_add_todo">Add todo</string>
    <string-array name="todo_status_modes">
        <item>New</item>
        <item>Started</item>
        <item>Finished</item>
        <item>Waiting</item>
        <item>Stopped</item>
    </string-array>
</resources>